# twitch-better-profile

./: .gitmodules  Cargo.toml  README.md  current_schema.json
.github/: FUNDING.yml
api/: .env  .env.example  .gitignore  Cargo.toml  README.md  cert.pem  current_schema.json  key.pem  rustfmt.toml
api/src/: lib.rs  main.rs
api/src/config/: app.rs  mod.rs
api/src/http/: messages_controller.rs  mod.rs  settings_controller.rs
api/src/models/: message.rs  mod.rs  settings.rs
api/src/models/materialized_views/: mod.rs  settings_by_username.rs
api/tests/http/: mod.rs  settings_controller_test.rs
extension/: .env.example  .gitignore  biome.jsonc  components.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
extension/locales/en/: messages.json
extension/locales/pt_BR/: messages.json
extension/src/: content.ts  popup.tsx  style.css
extension/src/background/: index.ts
extension/src/config/: env.ts
extension/src/scripting/: components.ts  index.ts  observer.ts  queue.ts  scripting.css  types.d.ts
extension/src/types/: types.d.ts
extension/src/utils/: i18nUtils.ts
platform/: .env  composer.json  package-lock.json
platform/app/Models/: User.php
platform/app/Observers/: UserObserver.php
platform/app/Providers/: AppServiceProvider.php  EventServiceProvider.php
platform/bootstrap/: providers.php
platform/config/: extension.php  services.php
platform/routes/: api.php
src/: main.rs
src/config/: app.rs
src/http/: mod.rs  settings_controller.rs
src/models/: message.rs  mod.rs  settings.rs
(+42 files in other folders)
