[package]
name = "twitch-extension-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = { version = "4.8.0", features = ["rustls-0_23"] }
cargo-watch = "8.5.2"
charybdis = "0.7.2"
chrono = { version = "0.4.38", features = ["serde"] }
colog = "1.3.0"
dotenvy = "0.15.7"
log = "0.4.22"
rustls = "0.23.11"
rustls-pemfile = "2.1.2"
scylla = { version = "0.13.1", features = ["chrono", "time"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.62"
tokio = { version = "1.38.1", features = ["full"] }
uuid = "1.10.0"
